# boring-bridge-holder

./: Anchor.toml  README.md  encoded_transaction.txt  intermediate.json  package.json  sample.env  tsconfig.json
migrations/: deploy.ts
programs/boring-bridge-holder/: Cargo.toml
programs/boring-bridge-holder/src/: events.rs  lib.rs
programs/boring-bridge-holder/src/instructions/: mod.rs  transfer_remote.rs
scripts/: config.json  config_usdc.json  create_upgrade_tx.ts  example.ts  initialize.ts  transfer_ownership.ts  transfer_remote.ts  transfer_remote_squads.ts  update_configuration.ts  update_configuration_squads.ts  update_strategist.ts  update_strategist_squads.ts  verify_account_state.ts  verify_program.ts  verify_upgrade.ts
tests/: boring-bridge-holder.ts
