[package]
name = "boring-bridge-holder"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boring_bridge_holder"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-spl = "0.30.1"
anchor-lang = "0.30.1"
# anchor-lang = "0.29.0" If file is full of errors can try switching to this, then building, then switching back., seems to reset it.
borsh = "0.10.3"
solana-program = "1.16.24"
